# Transient

./: CMakeLists.txt  README.md
assets/: clem.ase
mechanics/: inventory.hpp  item_mech.hpp  look_mech.hpp  main.hpp  player.hpp  scene_mech.hpp
src/: inventory.cpp  look_mech.cpp  main.cpp  player.cpp  scene_engine.cpp  scene_factory.cpp  scene_operations.cpp
